<resources>
    <string name="app_name">eBay Catalog Search</string>
    <string name="sort_by">Sort By</string>
    <string name="keyword">Keyword</string>
    <string name="used">Used</string>
    <string name="New">New</string>
    <string name="price_range">Price Range</string>
    <string name="unspecified">Unspecified</string>
    <string name="condition">Condition</string>
    <string name="search">SEARCH</string>
    <string name="clear">CLEAR</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="please_enter_mandatory_field">Please enter mandatory field</string>
    <string name="please_enter_valid_price_values">Please enter valid price values</string>

    <string-array name="options">
        <item>Best Match</item>
        <item>Price: Highest first</item>
        <item>Price + Shipping: Highest first</item>
        <item>Price + Shipping: Lowest first</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>