<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/keyword"
        android:textColor="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/keywordEdit"
        android:layout_width="329dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_keyword"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword" />

    <EditText
        android:id="@+id/lowPrice"
        android:layout_width="151dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/minimum_price"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PriceRange" />

    <EditText
        android:id="@+id/highPrice"
        android:layout_width="151dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/maximum_price"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/lowPrice"
        app:layout_constraintTop_toBottomOf="@+id/PriceRange" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/condition"
        android:textColor="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowPrice" />

    <Button
        android:id="@+id/clear"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#2196F3"
        android:onClick="clearClicked"
        android:shadowColor="#2196F3"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/optionBar" />

    <CheckBox
        android:id="@+id/isUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:text="@string/used"
        app:layout_constraintBaseline_toBaselineOf="@+id/isNew"
        app:layout_constraintEnd_toStartOf="@+id/isUnspecified"
        app:layout_constraintStart_toEndOf="@+id/isNew" />

    <Spinner
        android:id="@+id/optionBar"
        android:layout_width="336dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/isUnspecified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/unspecified"
        app:layout_constraintBaseline_toBaselineOf="@+id/isUsed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/isUsed" />

    <CheckBox
        android:id="@+id/isNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/New"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/sort_by"
        android:textColor="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isNew" />

    <Button
        android:id="@+id/search"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#2196F3"
        android:onClick="searchClicked"
        android:text="@string/search"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionBar" />

    <TextView
        android:id="@+id/PriceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_range"
        android:textColor="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyKeyWarning" />

    <TextView
        android:id="@+id/emptyKeyWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Please enter mandatory field"
        android:textColor="#FF0000"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keywordEdit"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/priceRangeWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="Please enter valid price values"
        android:textColor="#FF0000"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowPrice"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>